Tuned Models Task 1

--- a/Task1/task1.ipynb
+++ b/Task1/task1.ipynb
@@ -850,23 +850,23 @@
       "The training report is: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.82      0.85      0.84       408\n",
-      "           1       0.75      0.71      0.73       258\n",
+      "           0       0.82      0.88      0.85       408\n",
+      "           1       0.78      0.70      0.74       258\n",
       "\n",
-      "    accuracy                           0.80       666\n",
-      "   macro avg       0.79      0.78      0.78       666\n",
-      "weighted avg       0.80      0.80      0.80       666\n",
+      "    accuracy                           0.81       666\n",
+      "   macro avg       0.80      0.79      0.79       666\n",
+      "weighted avg       0.80      0.81      0.80       666\n",
       " \n",
       "\n",
       "The test report is: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.85      0.82      0.83       141\n",
-      "           1       0.71      0.74      0.73        82\n",
+      "           0       0.83      0.82      0.82       141\n",
+      "           1       0.69      0.72      0.71        82\n",
       "\n",
-      "    accuracy                           0.79       223\n",
-      "   macro avg       0.78      0.78      0.78       223\n",
-      "weighted avg       0.80      0.79      0.79       223\n",
+      "    accuracy                           0.78       223\n",
+      "   macro avg       0.76      0.77      0.77       223\n",
+      "weighted avg       0.78      0.78      0.78       223\n",
       "\n"
      ]
     }
@@ -874,7 +874,7 @@
    "source": [
     "\n",
     "#Insntiate the Logistic Regression\n",
-    "logreg = LogisticRegression()\n",
+    "logreg = LogisticRegression(solver='liblinear')\n",
     "logreg.fit(X_train, y_train)\n",
     "# Create predictions for the sets\n",
     "X_pred = logreg.predict(X_train)\n",
@@ -949,55 +949,6 @@
       "The training report for SVM is: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.61      1.00      0.76       408\n",
-      "           1       0.00      0.00      0.00       258\n",
-      "\n",
-      "    accuracy                           0.61       666\n",
-      "   macro avg       0.31      0.50      0.38       666\n",
-      "weighted avg       0.38      0.61      0.47       666\n",
-      " \n",
-      "\n",
-      "The test report for SVM tree is: \n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.63      1.00      0.77       141\n",
-      "           1       0.00      0.00      0.00        82\n",
-      "\n",
-      "    accuracy                           0.63       223\n",
-      "   macro avg       0.32      0.50      0.39       223\n",
-      "weighted avg       0.40      0.63      0.49       223\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.svm import SVC\n",
-    "\n",
-    "svc = SVC(kernel='rbf', random_state=42)\n",
-    "svc.fit(X_train,y_train)\n",
-    "\n",
-    "svm_train_pred = svc.predict(X_train)\n",
-    "svm_test_pred = svc.predict(X_test)\n",
-    "\n",
-    "svm_train_report = classification_report(y_train, svm_train_pred)\n",
-    "svm_test_report = classification_report(y_test, svm_test_pred)\n",
-    "\n",
-    "print('The training report for SVM is:','\\n',svm_train_report, '\\n')\n",
-    "print('The test report for SVM tree is:', '\\n', svm_test_report)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The training report for SVM is: \n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
       "           0       1.00      1.00      1.00       408\n",
       "           1       1.00      1.00      1.00       258\n",
       "\n",
@@ -1009,12 +960,12 @@
       "The test report for SVM tree is: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.83      0.87      0.85       141\n",
-      "           1       0.76      0.70      0.73        82\n",
+      "           0       0.83      0.85      0.84       141\n",
+      "           1       0.73      0.70      0.71        82\n",
       "\n",
-      "    accuracy                           0.81       223\n",
-      "   macro avg       0.80      0.78      0.79       223\n",
-      "weighted avg       0.80      0.81      0.81       223\n",
+      "    accuracy                           0.79       223\n",
+      "   macro avg       0.78      0.77      0.78       223\n",
+      "weighted avg       0.79      0.79      0.79       223\n",
       "\n"
      ]
     }
@@ -1037,24 +988,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n",
+      "The best parameters are: \n",
+      " {'C': 10, 'penalty': 'l1'} \n",
+      "\n",
+      "The report for the Logistic Regression is as follows: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.79      0.82       141\n",
+      "           1       0.68      0.76      0.72        82\n",
+      "\n",
+      "    accuracy                           0.78       223\n",
+      "   macro avg       0.76      0.78      0.77       223\n",
+      "weighted avg       0.79      0.78      0.78       223\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tune the Logistic Regression Parameters\n",
+    "#Set  a parameter grid\n",
+    "model = LogisticRegression(solver='liblinear')\n",
+    "log_param = {'C':[0.01,0.1, 1, 10, 100],\n",
+    "            'penalty': ['l1', 'l2', 'elasticnet', None]}\n",
+    "#set up a grid search\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "log_grid = GridSearchCV(estimator=logreg, param_grid=log_param, scoring='accuracy', cv=5, verbose=1)\n",
+    "#Fit the grid searh model on the train data\n",
+    "log_grid.fit(X_train, y_train)\n",
+    "#Check o he best paramters\n",
+    "print('The best parameters are:','\\n', log_grid.best_params_, '\\n')\n",
+    "#Evaluate on the test data\n",
+    "log_tuned = log_grid.best_estimator_\n",
+    "y_log_tuned = log_tuned.predict(X_test)\n",
+    "log_report = classification_report(y_test, y_log_tuned)\n",
+    "print('The report for the Logistic Regression is as follows:','\\n',log_report)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 216 candidates, totalling 1080 fits\n",
+      "The best parameters are: \n",
+      " {'criterion': 'gini', 'max_depth': 5, 'max_features': None, 'min_samples_leaf': 5, 'min_samples_split': 2} \n",
+      "\n",
+      "The report for the Decision tree with best estimators is as follows: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.81      0.83       141\n",
+      "           1       0.70      0.77      0.73        82\n",
+      "\n",
+      "    accuracy                           0.79       223\n",
+      "   macro avg       0.78      0.79      0.78       223\n",
+      "weighted avg       0.80      0.79      0.80       223\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tune the parameters for the Decsioin Tree\n",
+    "#crate the parameter_grid\n",
+    "dt_param = {\n",
+    "    'max_depth': [3, 5, 10, None],\n",
+    "    'min_samples_split': [2, 5, 10],\n",
+    "    'min_samples_leaf': [1, 5, 10],\n",
+    "    'criterion': ['gini', 'entropy'],\n",
+    "    'max_features': [None, 'sqrt', 'log2']}\n",
+    "#Perform the Grid Search\n",
+    "dt_grid = GridSearchCV(estimator=clf, param_grid=dt_param,scoring='accuracy', cv = 5, verbose=1)\n",
+    "#fit the grid onto the train sets\n",
+    "dt_grid.fit(X_train, y_train)\n",
+    "#Show the best parameters \n",
+    "print('The best parameters are:','\\n', dt_grid.best_params_, '\\n')\n",
+    "#Evaluate on the test data\n",
+    "dt_tuned = dt_grid.best_estimator_\n",
+    "y_dt_tuned = dt_tuned.predict(X_test)\n",
+    "dt_report = classification_report(y_test, y_dt_tuned)\n",
+    "print('The report for the Decision tree with best estimators is as follows:','\\n',dt_report)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "#tune the parameters for the RandomForest models\n",
+    "#Create the parameters for the grid search\n",
+    "rfc_param = {'n_estimators':[50, 100, 200],\n",
+    "             'max_depth':[10, 20, 30],\n",
+    "             'min_samples_split':[2,5,10],\n",
+    "             'min_samples_leaf':[1, 2, 4],\n",
+    "             'max_features':['sqrt', 'log2', None]}\n",
+    "#create the grid \n",
+    "rfc_grid = GridSearchCV(estimator= rfc, param_grid=rfc_param, scoring = 'accuracy', cv = 5, verbose = 1)\n",
+    "#fit the grid onto the traon sets\n",
+    "rfc_grid.fit(X_train, y_train)\n",
+    "#show the best parameters\n",
+    "print('The best parameters are:', '\\n', rfc_grid.best_params_, '\\n')\n",
+    "#Evaluate on the test data\n",
+    "rfc_tuned = rfc_grid.best_estimator_\n",
+    "y_rfc_tuned = rfc_tuned.predict(X_test)\n",
+    "#Create a classification report to view the metrics of the tuned model\n",
+    "rfc_report = classification_report(y_test, y_rfc_tuned)\n",
+    "print('The report for the Random Forest Classiffier with best estimators is as follows:','\\n',rfc_report)"
+   ]
   },
   {
    "cell_type": "code",
