--- a/Task1/task1.ipynb
+++ b/Task1/task1.ipynb
@@ -1082,14 +1082,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n"
+      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n",
+      "The best parameters are: \n",
+      " {'max_depth': 10, 'max_features': 'log2', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 200} \n",
+      "\n",
+      "The report for the Random Forest Classiffier with best estimators is as follows: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.85      0.84       141\n",
+      "           1       0.73      0.70      0.71        82\n",
+      "\n",
+      "    accuracy                           0.79       223\n",
+      "   macro avg       0.78      0.77      0.78       223\n",
+      "weighted avg       0.79      0.79      0.79       223\n",
+      "\n"
      ]
     }
    ],
@@ -1114,13 +1127,6 @@
     "rfc_report = classification_report(y_test, y_rfc_tuned)\n",
     "print('The report for the Random Forest Classiffier with best estimators is as follows:','\\n',rfc_report)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
