--- a/Task3/task3.ipynb
+++ b/Task3/task3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -457,13 +457,13 @@
     "test_report = classification_report(y_test, y_pred)\n",
     "\n",
     "#display the results\n",
-    "print('The training report is:','\\n',train_report, '\\n')\n",
-    "print('The test report is:', '\\n', test_report)\n"
+    "print('The training report for the Logistic Regresion is:','\\n',train_report, '\\n')\n",
+    "print('The test reportfor the Logistic Regression is:', '\\n', test_report)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -611,8 +611,208 @@
     "rfc_train_report = classification_report(y_train, rfc_train_pred)\n",
     "rfc_test_report = classification_report(y_test, rfc_test_pred)\n",
     "\n",
-    "print('The training report for SVM is:','\\n',rfc_train_report, '\\n')\n",
-    "print('The test report for SVM tree is:', '\\n', rfc_test_report)"
+    "print('The training report for Random Forest Classifier is:','\\n',rfc_train_report, '\\n')\n",
+    "print('The test report for the Random Forest Classifier is:', '\\n', rfc_test_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n",
+      "The best parameters are: \n",
+      " {'C': 0.01, 'penalty': None} \n",
+      "\n",
+      "The report for the Logistic Regression is as follows: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.93      0.96        14\n",
+      "           1       0.82      0.90      0.86        10\n",
+      "           2       0.92      0.92      0.92        13\n",
+      "\n",
+      "    accuracy                           0.92        37\n",
+      "   macro avg       0.91      0.92      0.91        37\n",
+      "weighted avg       0.92      0.92      0.92        37\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#tune the Logistic regression model\n",
+    "#create a parameter grid for the regression\n",
+    "log_param = {'C':[0.01, 0.1, 1, 10, 100],\n",
+    "             'penalty':['l1', 'l2', 'elasticnet', None]}\n",
+    "#create a grid for these parameters\n",
+    "log_grid = GridSearchCV(estimator=logreg, param_grid=log_param, scoring='accuracy',cv=5, verbose=1) \n",
+    "#Fit the grid searh model on the train data\n",
+    "log_grid.fit(X_train, y_train)\n",
+    "#Check o he best paramters\n",
+    "print('The best parameters are:','\\n', log_grid.best_params_, '\\n')\n",
+    "#Evaluate on the test data\n",
+    "log_tuned = log_grid.best_estimator_\n",
+    "y_log_tuned = log_tuned.predict(X_test)\n",
+    "log_report = classification_report(y_test, y_log_tuned)\n",
+    "print('The report for the Logistic Regression is as follows:','\\n',log_report)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 216 candidates, totalling 1080 fits\n",
+      "The best parameters are: \n",
+      " {'criterion': 'gini', 'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2} \n",
+      "\n",
+      "The report for the Decision tree with best estimators is as follows: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        14\n",
+      "           1       0.83      1.00      0.91        10\n",
+      "           2       1.00      0.85      0.92        13\n",
+      "\n",
+      "    accuracy                           0.95        37\n",
+      "   macro avg       0.94      0.95      0.94        37\n",
+      "weighted avg       0.95      0.95      0.95        37\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tune the parameters for the Decsioin Tree\n",
+    "#crate the parameter_grid\n",
+    "dt_param = {\n",
+    "    'max_depth': [3, 5, 10, None],\n",
+    "    'min_samples_split': [2, 5, 10],\n",
+    "    'min_samples_leaf': [1, 5, 10],\n",
+    "    'criterion': ['gini', 'entropy'],\n",
+    "    'max_features': [None, 'sqrt', 'log2']}\n",
+    "#Perform the Grid Search\n",
+    "dt_grid = GridSearchCV(estimator=clf, param_grid=dt_param,scoring='accuracy', cv = 5, verbose=1)\n",
+    "#fit the grid onto the train sets\n",
+    "dt_grid.fit(X_train, y_train)\n",
+    "#Show the best parameters \n",
+    "print('The best parameters are:','\\n', dt_grid.best_params_, '\\n')\n",
+    "#Evaluate on the test data\n",
+    "dt_tuned = dt_grid.best_estimator_\n",
+    "y_dt_tuned = dt_tuned.predict(X_test)\n",
+    "dt_report = classification_report(y_test, y_dt_tuned)\n",
+    "print('The report for the Decision tree with best estimators is as follows:','\\n',dt_report)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n",
+      "The best parameters are: \n",
+      " {'max_depth': 20, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50} \n",
+      "\n",
+      "The report for the Random Forest Classiffier with best estimators is as follows: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        14\n",
+      "           1       0.90      0.90      0.90        10\n",
+      "           2       0.92      0.92      0.92        13\n",
+      "\n",
+      "    accuracy                           0.95        37\n",
+      "   macro avg       0.94      0.94      0.94        37\n",
+      "weighted avg       0.95      0.95      0.95        37\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#tune the parameters for the RandomForest models\n",
+    "#Create the parameters for the grid search\n",
+    "rfc_param = {'n_estimators':[50, 100, 200],\n",
+    "             'max_depth':[10, 20, 30],\n",
+    "             'min_samples_split':[2,5,10],\n",
+    "             'min_samples_leaf':[1, 2, 4],\n",
+    "             'max_features':['sqrt', 'log2', None]}\n",
+    "#create the grid \n",
+    "rfc_grid = GridSearchCV(estimator= rfc, param_grid=rfc_param, scoring = 'accuracy', cv = 5, verbose = 1)\n",
+    "#fit the grid onto the traon sets\n",
+    "rfc_grid.fit(X_train, y_train)\n",
+    "#show the best parameters\n",
+    "print('The best parameters are:', '\\n', rfc_grid.best_params_, '\\n')\n",
+    "#Evaluate on the test data\n",
+    "rfc_tuned = rfc_grid.best_estimator_\n",
+    "y_rfc_tuned = rfc_tuned.predict(X_test)\n",
+    "#Create a classification report to view the metrics of the tuned model\n",
+    "rfc_report = classification_report(y_test, y_rfc_tuned)\n",
+    "print('The report for the Random Forest Classiffier with best estimators is as follows:','\\n',rfc_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 288 candidates, totalling 864 fits\n",
+      "The best parameters are: \n",
+      " {'C': 1, 'coef0': 1, 'degree': 2, 'gamma': 'scale', 'kernel': 'poly'} \n",
+      "\n",
+      "The report for the Decision tree with best estimators is as follows: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        14\n",
+      "           1       1.00      0.90      0.95        10\n",
+      "           2       0.93      1.00      0.96        13\n",
+      "\n",
+      "    accuracy                           0.97        37\n",
+      "   macro avg       0.98      0.97      0.97        37\n",
+      "weighted avg       0.97      0.97      0.97        37\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tune the parameters for the SVM model\n",
+    "#create t parameter grid\n",
+    "svm_param = {\"C\":[0.1, 1, 10,100],\n",
+    "             'kernel':['linear', 'poly', 'rbf', 'sigmoid'],\n",
+    "             'gamma':['scale', 'auto'],\n",
+    "             'degree':[2, 3, 4],\n",
+    "             'coef0':[0.0, 0.5, 1]}\n",
+    "\n",
+    "svm_grid = GridSearchCV(estimator=svc, param_grid=svm_param, scoring='accuracy', cv = 3, verbose =1)\n",
+    "#fit the grid onto the train sets\n",
+    "svm_grid.fit(X_train, y_train)\n",
+    "#Show the best parameters \n",
+    "print('The best parameters are:','\\n', svm_grid.best_params_, '\\n')\n",
+    "#Evaluate on the test data\n",
+    "svm_tuned = svm_grid.best_estimator_\n",
+    "y_svm_tuned = svm_tuned.predict(X_test)\n",
+    "svm_report = classification_report(y_test, y_svm_tuned)\n",
+    "print('The report for the Decision tree with best estimators is as follows:','\\n',svm_report)\n"
    ]
   },
   {
