Tuned Models Task 3

--- a/Task3/task3.ipynb
+++ b/Task3/task3.ipynb
@@ -817,6 +817,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#note vchanges"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
