Added README and finished the models for task 2

--- a/Task2/task2.ipynb
+++ b/Task2/task2.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +242,7 @@
        "[15509 rows x 10 columns]"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +562,7 @@
        "9        Augustine            Fathima Babu             Byon           6960  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +800,7 @@
        "9        Augustine            Fathima Babu             Byon           6960  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1052,7 @@
        "[24950 rows x 11 columns]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,6 +1060,365 @@
    "source": [
     "imdb = imdb.explode('Genre')\n",
     "imdb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name              object\n",
+       "Year               Int64\n",
+       "Duration(Min)      Int64\n",
+       "Genre             object\n",
+       "Rating           float64\n",
+       "Votes              Int64\n",
+       "Director          object\n",
+       "Actor 1           object\n",
+       "Actor 2           object\n",
+       "Actor 3           object\n",
+       "Duration(Sec)      Int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imdb.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imdb['Duration(Min)'] = imdb['Duration(Min)'].astype('Float64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Drop unneccesaary columns\n",
+    "imdb = imdb.drop(columns=['Name', 'Year', 'Duration(Sec)'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The percentage of missing values per feature is as follows: \n",
+      " Duration(Min)    43.0\n",
+      "Rating           37.0\n",
+      "Votes            37.0\n",
+      "Actor 3          14.0\n",
+      "Actor 2          11.0\n",
+      "Genre             8.0\n",
+      "Actor 1           7.0\n",
+      "Director          2.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate percentage of null values for each column\n",
+    "null_percentage = imdb.isnull().sum() / len(imdb) * 100\n",
+    "\n",
+    "# Format and display the results\n",
+    "null_percentage = null_percentage.sort_values(ascending=False)  # Optional: sort by percentage\n",
+    "print('The percentage of missing values per feature is as follows:','\\n', null_percentage.round())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25396\\2205836067.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  imdb['Duration(Min)'].fillna(imdb['Duration(Min)'].median(), inplace=True)\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25396\\2205836067.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  imdb['Votes'].fillna(imdb['Votes'].median(), inplace=True)\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25396\\2205836067.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  imdb['Rating'].fillna(imdb['Rating'].median(), inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#fill in the null values of the Ratings, Vote, and Duration(Min) with mean/median values\n",
+    "imdb['Duration(Min)'].fillna(imdb['Duration(Min)'].median(), inplace=True)\n",
+    "imdb['Votes'].fillna(imdb['Votes'].median(), inplace=True)\n",
+    "imdb['Rating'].fillna(imdb['Rating'].median(), inplace=True)\n",
+    "#Drop the null values in the categorical columns  \n",
+    "imdb = imdb.dropna(subset = ['Actor 1', 'Actor 2', 'Actor 3', 'Director'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Duration(Min)    Float64\n",
+       "Genre             object\n",
+       "Rating           float64\n",
+       "Votes              Int64\n",
+       "Director          object\n",
+       "Actor 1           object\n",
+       "Actor 2           object\n",
+       "Actor 3           object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imdb.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "#scale the numerical columns above\n",
+    "scaler= StandardScaler()\n",
+    "imdb[['Duration(Min)', 'Votes']] = scaler.fit_transform(imdb[['Duration(Min)', 'Votes']])\n",
+    "# One Hot Encode the genres column\n",
+    "genres = pd.get_dummies(imdb['Genre'], prefix='Genre')\n",
+    "#Add the genres to the dataframe\n",
+    "imdb=pd.concat([imdb, genres], axis=1)\n",
+    "#Drop the Genres colum since it won't be needed anymore\n",
+    "imdb.drop(columns=['Genre'], inplace=True)\n",
+    "#Target encode the other object data type columns\n",
+    "imdb['Director'] = imdb['Director'].map(imdb.groupby('Director')['Rating'].mean())\n",
+    "imdb['Actor 1'] = imdb['Actor 1'].map(imdb.groupby('Actor 1')['Rating'].mean())\n",
+    "imdb['Actor 2'] = imdb['Actor 2'].map(imdb.groupby(\"Actor 2\")['Rating'].mean())\n",
+    "imdb['Actor 3'] = imdb['Actor 3'].map(imdb.groupby('Actor 3')['Rating'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Split the data into test and train sets using the train testsplit\n",
+    "#Import neccessary libraries \n",
+    "from sklearn.model_selection import train_test_split\n",
+    "#Assign the target and feature values\n",
+    "X=imdb.drop(columns=['Rating'])#Features\n",
+    "y =imdb['Rating']#target\n",
+    "#Split the data into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The metrics for the LInear Regression is as follows: \n",
+      "\n",
+      "The r2 score is: \t 0.7120171589192912 \n",
+      "\n",
+      "The Mean Squared Error is: \t 0.3978181741521946 \n",
+      "\n",
+      "The RMSE is: \t 0.6307282886887147 \n",
+      "\n",
+      "The Mean Absolute Error is: \t 0.44939096152908703 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a linear Regression model\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "#Create the regressor\n",
+    "lireg = LinearRegression()\n",
+    "#Fit into the train sets\n",
+    "lireg.fit(X_train, y_train)\n",
+    "#Make predictions of the model\n",
+    "lireg_predict = lireg.predict(X_test)\n",
+    "\n",
+    "#Calculate and show the metrics\n",
+    "print('The metrics for the LInear Regression is as follows:','\\n')\n",
+    "#Import the neccesary metrics\n",
+    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+    "lireg_r2 = r2_score(y_test, lireg_predict)\n",
+    "print('The r2 score is:', '\\t', lireg_r2, '\\n')\n",
+    "lireg_mse = mean_squared_error(y_test, lireg_predict)\n",
+    "print('The Mean Squared Error is:', '\\t', lireg_mse, '\\n')\n",
+    "lireg_rmse = np.sqrt(lireg_mse)\n",
+    "print('The RMSE is:','\\t', lireg_rmse, '\\n' )\n",
+    "lireg_mae = mean_absolute_error(y_test, lireg_predict)\n",
+    "print('The Mean Absolute Error is:', '\\t', lireg_mae, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The metrics of the Ridge Regression as follows\n",
+      "The r2 score is: \t 0.7120207255371801 \n",
+      "\n",
+      "The Mean Squared Error is: \t 0.397813247242622 \n",
+      "\n",
+      "The RMSE is: \t 0.6307243829460075 \n",
+      "\n",
+      "The Mean Absolute Error is: \t 0.4493497018298829 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Perform a ridge regression\n",
+    "from sklearn.linear_model import Ridge, Lasso\n",
+    "#iniatialize the regressor\n",
+    "l2 = Ridge()\n",
+    "#Fit onto the train and test data\n",
+    "l2.fit(X_train, y_train)\n",
+    "#make a prediction of the model\n",
+    "l2_predict = l2.predict(X_test)\n",
+    "#Make calculations and show the metrics\n",
+    "print('The metrics of the Ridge Regression as follows')\n",
+    "l2_r2 = r2_score(y_test, l2_predict)\n",
+    "print('The r2 score is:', '\\t', l2_r2, '\\n')\n",
+    "l2_mse = mean_squared_error(y_test, l2_predict)\n",
+    "print('The Mean Squared Error is:', '\\t', l2_mse, '\\n')\n",
+    "l2_rmse = np.sqrt(l2_mse)\n",
+    "print('The RMSE is:','\\t', l2_rmse, '\\n' )\n",
+    "l2_mae = mean_absolute_error(y_test, l2_predict)\n",
+    "print('The Mean Absolute Error is:', '\\t', l2_mae, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The metrics of the Lasso Regression as follows\n",
+      "The r2 score is: \t -9.931057958212364e-07 \n",
+      "\n",
+      "The Mean Squared Error is: \t 1.3813967795263127 \n",
+      "\n",
+      "The RMSE is: \t 1.1753283709356772 \n",
+      "\n",
+      "The Mean Absolute Error is: \t 0.8504355265090696 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#iniatialize the regressor\n",
+    "l1 = Lasso()\n",
+    "#Fit onto the train and test data\n",
+    "l1.fit(X_train, y_train)\n",
+    "#make a prediction of the model\n",
+    "l1_predict = l1.predict(X_test)\n",
+    "#Make calculations and show the metrics\n",
+    "print('The metrics of the Lasso Regression as follows')\n",
+    "l1_r2 = r2_score(y_test, l1_predict)\n",
+    "print('The r2 score is:', '\\t', l1_r2, '\\n')\n",
+    "l1_mse = mean_squared_error(y_test, l1_predict)\n",
+    "print('The Mean Squared Error is:', '\\t', l1_mse, '\\n')\n",
+    "l1_rmse = np.sqrt(l1_mse)\n",
+    "print('The RMSE is:','\\t', l1_rmse, '\\n' )\n",
+    "l1_mae = mean_absolute_error(y_test, l1_predict)\n",
+    "print('The Mean Absolute Error is:', '\\t', l1_mae, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The metrics of the Random Forest Regression as follows\n",
+      "The r2 score is: \t 0.8971405742529021 \n",
+      "\n",
+      "The Mean Squared Error is: \t 0.14208953836102292 \n",
+      "\n",
+      "The RMSE is: \t 0.37694765997552354 \n",
+      "\n",
+      "The Mean Absolute Error is: \t 0.19651129363449693 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "#instsantiate the regressor\n",
+    "dfr = RandomForestRegressor()\n",
+    "#Fit onto the train sets\n",
+    "dfr.fit(X_train, y_train)\n",
+    "#Make a prediction for the model\n",
+    "dfr_prediction = dfr.predict(X_test)\n",
+    "#Make calculations and show the metrics success\n",
+    "print('The metrics of the Random Forest Regression as follows')\n",
+    "dfr_r2 = r2_score(y_test, dfr_prediction)\n",
+    "print('The r2 score is:', '\\t', dfr_r2, '\\n')\n",
+    "dfr_mse = mean_squared_error(y_test, dfr_prediction)\n",
+    "print('The Mean Squared Error is:', '\\t', dfr_mse, '\\n')\n",
+    "dfr_rmse = np.sqrt(dfr_mse)\n",
+    "print('The RMSE is:','\\t', dfr_rmse, '\\n' )\n",
+    "dfr_mae = mean_absolute_error(y_test, dfr_prediction)\n",
+    "print('The Mean Absolute Error is:', '\\t', dfr_mae, '\\n')"
    ]
   },
   {
